tests/ui/attributes/invalid-instruction-set-target.stderr
error: target `x86_64-unknown-linux-gnu` does not support `#[instruction_set(arm::*)]`
  --> $DIR/invalid-instruction-set-target.rs:3:1
   |
LL | #[instruction_set(arm::a32)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

